library/general/containerresourceratios/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: containerresourceratios
tests:
- name: block-endpoint-default-role
  template: template.yaml
  constraint: samples/container-must-meet-ratio/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/container-must-meet-ratio/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed
    object: samples/container-must-meet-ratio/example_disallowed.yaml
    assertions:
    - violations: yes
